RESOLVED FIXED47897
[Qt] WebKit2 MacOS build fix
https://bugs.webkit.org/show_bug.cgi?id=47897
Summary [Qt] WebKit2 MacOS build fix
Luiz Agostini
Reported 2010-10-19 04:31:52 PDT
WebKit2 MacOS build fix
Attachments
patch (5.66 KB, patch)
2010-10-19 04:39 PDT, Luiz Agostini
koivisto: review+
Luiz Agostini
Comment 1 2010-10-19 04:39:57 PDT
Luiz Agostini
Comment 2 2010-10-19 08:30:51 PDT
Note You need to log in before you can comment on or make changes to this bug.