2010-10-19  Luiz Agostini  <luiz.agostini@openbossa.org>

Reviewed by Antti Koivisto.

        [Qt] WebKit2 MacOS build fix
        https://bugs.webkit.org/show_bug.cgi?id=47897

        Qt WebKit2 MacOS build fix.

        * bridge/npapi.h:
2010-10-19  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Antti Koivisto.

        [Qt] WebKit2 MacOS build fix
        https://bugs.webkit.org/show_bug.cgi?id=47897

        Qt WebKit2 MacOS build fix.

        * UIProcess/WebPageProxy.cpp:
        * WebKit2.pri:
        * WebKit2.pro:
2010-10-19  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Antti Koivisto.

        [Qt] WebKit2 MacOS build fix
        https://bugs.webkit.org/show_bug.cgi?id=47897

        Qt WebKit2 MacOS build fix.

        * WebKitTestRunner/PlatformWebView.h:
        * WebKitTestRunner/qt/TestControllerQt.cpp:

Canonical link: https://commits.webkit.org/60622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70060 268f45cc-cd09-0410-ab3c-d52691b4dbfc