WebKit2/UIProcess/WebPageProxy.cpp
@@ -455,7 +455,7 @@ void WebPageProxy::terminateProcess()
     process()->terminate();
 }
 
-#if !PLATFORM(CF)
+#if !PLATFORM(CF) || defined(BUILDING_QT__)
 PassRefPtr<WebData> WebPageProxy::sessionStateData(WebPageProxySessionStateFilterCallback, void* context) const
 {
     // FIXME: Return session state data for saving Page state.
